--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 body{
-    margin: 8pt;
+    margin: 8px;
     display: block;
     background-color: #FDEDEC;
     text-align: center;
