--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body{
     display: block;
     background-color: #FDEDEC;
     text-align: center;
-    margin-left:auto;
-    margin-right: auto;
+    /* margin-left:auto;
+    margin-right: auto; */
 }
 
 #mainHeading{
